Add required configs 🫸🌀✏️📗🐧🐳⬆

--- a/professor-app/src/main/resources/application.properties
+++ b/professor-app/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=professor-app
+spring.datasource.url=jdbc:mysql://localhost:3306/university?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Jakarta&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database=mysql
+server.port=8082
+server.servlet.context-path=/professor
+keycloak.auth-server-url=http://localhost:8080/auth
+keycloak.realm=University
+keycloak.resource=professor-app
+keycloak.credentials.secret=0364b278-3108-441e-9cba-400cfa1b0515
+keycloak.principal-attribute=preferred_username
