feat: Add required configs 🫸🌀✏️📗🐧🐳⬆

--- a/student-app/src/main/resources/application.properties
+++ b/student-app/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=student-app
+spring.datasource.url=jdbc:mysql://localhost:3306/university?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Jakarta&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database=mysql
+server.port=8081
+keycloak.auth-server-url=http://localhost:8080/auth
+keycloak.realm=University
+keycloak.resource=student-app
+keycloak.credentials.secret=96fd65d5-4698-4d3d-9abf-8b0d821d466e
+keycloak.principal-attribute=preferred_username
